тест правки графики

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__inner">
           <a href="/" class="header-logo">
-            <img src="/images/лого.svg" alt="Логотип" />
+            <img src="images/лого.svg" alt="Логотип" />
           </a>
           <nav class="header__nav">
             <div class="header__nav-item">
