финальные правки графики

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
               </div>
               <a href="#" class="link-to">
                 Обсудить проект
-                <img src="/images/arrow-top.svg" alt="Связаться" />
+                <img src="./images/arrow-top.svg" alt="Связаться" />
               </a>
             </div>
             <div class="intro__photo">
               <img
                 class="intro__photo-img"
-                src="/images/photo-1.png"
+                src="./images/photo-1.png"
                 alt="Фото дизайнера"
               />
             </div>
@@ -65,7 +65,7 @@
             <div class="about__photo">
               <img
                 class="about__photo-img"
-                src="/images/photo-2.png"
+                src="./images/photo-2.png"
                 alt="Фото дизайнера"
               />
             </div>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="project__item-photo">
                   <img
-                    src="/images/project/project-1.jpg"
+                    src="./images/project/project-1.jpg"
                     alt="Дизай для винного интернет-магазина"
                     class="project__item-img"
                   />
@@ -115,7 +115,7 @@
               <div class="project__item">
                 <div class="project__item-photo">
                   <img
-                    src="/images/project/project-2.jpg"
+                    src="./images/project/project-2.jpg"
                     alt="Дизай для винного интернет-магазина"
                     class="project__item-img"
                   />
@@ -136,7 +136,7 @@
                 </div>
                 <div class="project__item-photo">
                   <img
-                    src="/images/project/project-3.jpg"
+                    src="./images/project/project-3.jpg"
                     alt="Дизай для винного интернет-магазина"
                     class="project__item-img"
                   />
@@ -145,7 +145,7 @@
               <div class="project__item">
                 <div class="project__item-photo">
                   <img
-                    src="/images/project/project-4.jpg"
+                    src="./images/project/project-4.jpg"
                     alt="Дизай для винного интернет-магазина"
                     class="project__item-img"
                   />
@@ -160,7 +160,7 @@
             </div>
             <a href="/" class="link-to link-to--pinterest"
               >Смотреть больше на Pinterest
-              <img src="/images/arrow-top.svg" alt="Связаться" />
+              <img src="./images/arrow-top.svg" alt="Связаться" />
             </a>
           </div>
         </div>
@@ -260,7 +260,7 @@
               <div class="cta__social-item">
                 <img
                   class="cta__social-icon"
-                  src="/images/cta/tlg.svg"
+                  src="./images/cta/tlg.svg"
                   alt="Telegram"
                 />
                 @el_grsgv
@@ -268,7 +268,7 @@
               <div class="cta__social-item">
                 <img
                   class="cta__social-icon"
-                  src="/images/cta/vk.svg"
+                  src="./images/cta/vk.svg"
                   alt="Вконтакте"
                 />
                 mnqpw
@@ -276,7 +276,7 @@
               <div class="cta__social-item">
                 <img
                   class="cta__social-icon"
-                  src="/images/cta/whatsapp.svg"
+                  src="./images/cta/whatsapp.svg"
                   alt="Whatsapp"
                 />
                 +7(927)371-20-94
@@ -284,7 +284,7 @@
             </div>
             <a href="#" class="link-to">
               Заполнить Бриф на сайт
-              <img src="/images/arrow-top.svg" alt="Заполнить Бриф на сайт" />
+              <img src="./images/arrow-top.svg" alt="Заполнить Бриф на сайт" />
             </a>
           </div>
         </div>
@@ -294,7 +294,7 @@
       <div class="container">
         <div class="footer__inner">
           <a href="/" class="header-logo">
-            <img src="/images/лого.svg" alt="Логотип" />
+            <img src="./images/лого.svg" alt="Логотип" />
           </a>
           <nav class="footer__nav">
             <div class="footer__nav-item">
@@ -311,7 +311,10 @@
             </div>
           </nav>
           <a href="#" class="link-to link-to--scroll-top">
-            <img src="/images/arrow-top--bg.svg" alt="Заполнить Бриф на сайт" />
+            <img
+              src="./images/arrow-top--bg.svg"
+              alt="Заполнить Бриф на сайт"
+            />
           </a>
         </div>
       </div>
