--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
           </a>
           <nav class="header__nav">
             <div class="header__nav-item">
-              <a href="#" class="header__nav-link">Обо мне</a>
+              <a href="#about" class="header__nav-link">Обо мне</a>
             </div>
             <div class="header__nav-item">
-              <a href="#" class="header__nav-link">Портфолио</a>
+              <a href="#project" class="header__nav-link">Портфолио</a>
             </div>
             <div class="header__nav-item">
-              <a href="#" class="header__nav-link">Стоимость</a>
+              <a href="#price" class="header__nav-link">Стоимость</a>
             </div>
             <div class="header__nav-item">
-              <a href="#" class="header__nav-link">Контакты</a>
+              <a href="#cta" class="header__nav-link">Контакты</a>
             </div>
           </nav>
           <div class="header__nav-btn">
@@ -52,7 +52,10 @@
               <div class="intro__description">
                 Создам интерфейс, который вдохновит и упростит работу
               </div>
-              <a href="#" class="link-to link-to--intro">
+              <a
+                href="https://forms.yandex.ru/cloud/665eddd23e9d082c4a7b0e91/"
+                class="link-to link-to--intro"
+              >
                 Обсудить проект
                 <img src="./images/arrow-top.svg" alt="Связаться" />
               </a>
@@ -68,7 +71,7 @@
         </div>
       </section>
 
-      <section class="section about">
+      <section class="section about" id="about">
         <div class="container">
           <div class="about__inner">
             <div class="about__photo">
@@ -116,7 +119,7 @@
         </div>
       </section>
 
-      <section class="section project">
+      <section class="section project" id="project">
         <div class="container">
           <div class="project__inner">
             <h2 class="title project__title">Портфолио</h2>
@@ -169,7 +172,7 @@
               <div class="project__item">
                 <div class="project__item-photo">
                   <img
-                    src="./images/project/project-4.jpg"
+                    src="./images/project/project-4.png"
                     alt="Дизай для винного интернет-магазина"
                     class="project__item-img"
                   />
@@ -182,7 +185,9 @@
                 </div>
               </div>
             </div>
-            <a href="/" class="link-to link-to--pinterest"
+            <a
+              href="https://pin.it/7LLGRDDUR"
+              class="link-to link-to--pinterest"
               >Смотреть больше на Pinterest
               <img src="./images/arrow-top.svg" alt="Связаться" />
             </a>
@@ -190,7 +195,7 @@
         </div>
       </section>
 
-      <section class="section price">
+      <section class="section price" id="price">
         <div class="container">
           <h2 class="title price__title">Стоимость и сроки</h2>
           <div class="price__description">
@@ -270,7 +275,7 @@
         </div>
       </section>
 
-      <section class="section cta">
+      <section class="section cta" id="cta">
         <div class="container">
           <h2 class="title cta__title">
             Свяжитесть со мной, как Вам будет удобно или заполните Бриф
@@ -281,32 +286,35 @@
           </div>
           <div class="cta__inner">
             <div class="cta__social">
-              <div class="cta__social-item">
+              <a href="https://t.me/el_grshv" class="cta__social-item">
                 <img
                   class="cta__social-icon"
                   src="./images/cta/tlg.svg"
                   alt="Telegram"
                 />
                 @el_grsgv
-              </div>
-              <div class="cta__social-item">
+              </a>
+              <a href="https://vk.com/mnqpw" class="cta__social-item">
                 <img
                   class="cta__social-icon"
                   src="./images/cta/vk.svg"
                   alt="Вконтакте"
                 />
                 mnqpw
-              </div>
-              <div class="cta__social-item">
+              </a>
+              <a href="tel:79273712094" class="cta__social-item">
                 <img
                   class="cta__social-icon"
                   src="./images/cta/whatsapp.svg"
                   alt="Whatsapp"
                 />
                 +7(927)371-20-94
-              </div>
+              </a>
             </div>
-            <a href="#" class="link-to link-to--cta">
+            <a
+              href="https://forms.yandex.ru/cloud/665eddd23e9d082c4a7b0e91/"
+              class="link-to link-to--cta"
+            >
               Заполнить Бриф на сайт
               <img src="./images/arrow-top.svg" alt="Заполнить Бриф на сайт" />
             </a>
@@ -328,16 +336,16 @@
           </a>
           <nav class="footer__nav">
             <div class="footer__nav-item">
-              <a href="#" class="footer__nav-link">Обо мне</a>
+              <a href="#about" class="footer__nav-link">Обо мне</a>
             </div>
             <div class="footer__nav-item">
-              <a href="#" class="footer__nav-link">Портфолио</a>
+              <a href="#project" class="footer__nav-link">Портфолио</a>
             </div>
             <div class="footer__nav-item">
-              <a href="#" class="footer__nav-link">Стоимость</a>
+              <a href="#price" class="footer__nav-link">Стоимость</a>
             </div>
             <div class="footer__nav-item">
-              <a href="#" class="footer__nav-link">Контакты</a>
+              <a href="#cta" class="footer__nav-link">Контакты</a>
             </div>
           </nav>
           <a href="#" class="link-to link-to--scroll-top">
