Открытие ссылок в новой вкладке, правка текста у карточек портфолио

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <title>Portfolio</title>
+    <title>GEN</title>
+    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon/favicon-16x16.png" type="image/png" />
+    <link rel="icon" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__inner">
           <a href="/" class="header-logo">
@@ -53,7 +57,8 @@
                 Создам интерфейс, который вдохновит и упростит работу
               </div>
               <a
-                href="https://forms.yandex.ru/cloud/665eddd23e9d082c4a7b0e91/"
+                target="_blank"
+                href="https://t.me/el_grshv"
                 class="link-to link-to--intro"
               >
                 Обсудить проект
@@ -128,13 +133,13 @@
                 <div class="project__item-content">
                   <div class="project__item-year">2022</div>
                   <div class="project__item-name">
-                    Дизай для винного интернет-магазина
+                    Дизайн для интернет-магазина велосипедов
                   </div>
                 </div>
                 <div class="project__item-photo">
                   <img
                     src="./images/project/project-1.jpg"
-                    alt="Дизай для винного интернет-магазина"
+                    alt="Дизайн для интернет-магазина велосипедов"
                     class="project__item-img"
                   />
                 </div>
@@ -143,14 +148,14 @@
                 <div class="project__item-photo">
                   <img
                     src="./images/project/project-2.jpg"
-                    alt="Дизай для винного интернет-магазина"
+                    alt="Дизайн сайта для базы отдыха"
                     class="project__item-img"
                   />
                 </div>
                 <div class="project__item-content">
                   <div class="project__item-year">2023</div>
                   <div class="project__item-name">
-                    Дизайн для интернет-магазина велосипедов
+                    Дизайн сайта для базы отдыха
                   </div>
                 </div>
               </div>
@@ -158,13 +163,13 @@
                 <div class="project__item-content">
                   <div class="project__item-year">2023</div>
                   <div class="project__item-name">
-                    Дизайн сайта для базы отдыха
+                    Дизайн сайта-визитки для цветочного магазина
                   </div>
                 </div>
                 <div class="project__item-photo">
                   <img
                     src="./images/project/project-3.jpg"
-                    alt="Дизай для винного интернет-магазина"
+                    alt="Дизайн сайта-визитки для цветочного магазина"
                     class="project__item-img"
                   />
                 </div>
@@ -173,19 +178,20 @@
                 <div class="project__item-photo">
                   <img
                     src="./images/project/project-4.png"
-                    alt="Дизай для винного интернет-магазина"
+                    alt="Дизайн сайта для турагенства"
                     class="project__item-img"
                   />
                 </div>
                 <div class="project__item-content">
                   <div class="project__item-year">2024</div>
                   <div class="project__item-name">
-                    Дизайн сайта-визитки для цветочного магазина
+                    Дизайн сайта для турагенства
                   </div>
                 </div>
               </div>
             </div>
             <a
+              target="_blank"
               href="https://pin.it/7LLGRDDUR"
               class="link-to link-to--pinterest"
               >Смотреть больше на Pinterest
@@ -286,7 +292,11 @@
           </div>
           <div class="cta__inner">
             <div class="cta__social">
-              <a href="https://t.me/el_grshv" class="cta__social-item">
+              <a
+                target="_blank"
+                href="https://t.me/el_grshv"
+                class="cta__social-item"
+              >
                 <img
                   class="cta__social-icon"
                   src="./images/cta/tlg.svg"
@@ -294,7 +304,11 @@
                 />
                 @el_grsgv
               </a>
-              <a href="https://vk.com/mnqpw" class="cta__social-item">
+              <a
+                target="_blank"
+                href="https://vk.com/mnqpw"
+                class="cta__social-item"
+              >
                 <img
                   class="cta__social-icon"
                   src="./images/cta/vk.svg"
@@ -302,7 +316,11 @@
                 />
                 mnqpw
               </a>
-              <a href="tel:79273712094" class="cta__social-item">
+              <a
+                target="_blank"
+                href="tel:79273712094"
+                class="cta__social-item"
+              >
                 <img
                   class="cta__social-icon"
                   src="./images/cta/whatsapp.svg"
@@ -312,6 +330,7 @@
               </a>
             </div>
             <a
+              target="_blank"
               href="https://forms.yandex.ru/cloud/665eddd23e9d082c4a7b0e91/"
               class="link-to link-to--cta"
             >
@@ -348,7 +367,7 @@
               <a href="#cta" class="footer__nav-link">Контакты</a>
             </div>
           </nav>
-          <a href="#" class="link-to link-to--scroll-top">
+          <a href="#header" class="link-to link-to--scroll-top">
             <img
               src="./images/arrow-top--bg.svg"
               alt="Заполнить Бриф на сайт"
