--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>GEN</title>
-    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon/favicon-16x16.png" type="image/png" />
-    <link rel="icon" sizes="32x32" href="/favicon/favicon-32x32.png" />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon/favicon-16x16.png" type="image/png" />
+    <link rel="icon" sizes="32x32" href="./favicon/favicon-32x32.png" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
   </head>
   <body>
     <header class="header" id="header">
