--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="manifest" href="./favicon/site.webmanifest" />
   </head>
   <body>
+    <div id="preloader">
+      <div class="spinner"></div>
+      Загрузка...
+    </div>
     <header class="header" id="header">
       <div class="container">
         <div class="header__inner">
